thirty first step to new crm